[workspace]
resolver = "3"

members = [
    "rdftk_cli",
    "rdftk_core",
    "rdftk_io",
    "rdftk_iri",
    "rdftk_names",
    #    "rdftk_ontology",
    #    "rdftk_query",
    #    "rdftk_skos",
]

[workspace.lints.rust]
exported_private_dependencies = "deny"
anonymous_parameters = "deny"
bare_trait_objects = "deny"
deref_nullptr = "deny"
drop_bounds = "deny"
dyn_drop = "deny"
ellipsis_inclusive_range_patterns = "deny"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
future_incompatible = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
nonstandard_style = { level = "warn", priority = -1 }
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = "warn"
unreachable_pub = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
all = "warn"
