[workspace]
resolver = "3"

members = [
    "rdftk_cli",
    "rdftk_core",
    "rdftk_io",
    "rdftk_iri",
    "rdftk_names",
    #    "rdftk_ontology",
    #    "rdftk_query",
    #    "rdftk_skos",
]

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
anonymous_parameters = "deny"
bare_trait_objects = "deny"
deref_nullptr = "deny"
drop_bounds = "deny"
dyn_drop = "deny"
elided_lifetimes_in_paths = "warn"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "warn"
exported_private_dependencies = "deny"
future_incompatible = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
nonstandard_style = { level = "warn", priority = -1 }
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
all = "warn"
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"

[workspace.lints.clippy]
all = "warn"
