[package]
name = "rdftk_graph"
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
readme = "README.md"
publish = true


[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rdftk_core = { version = "0.1", path = "../rdftk_core" }