[package]
name = "rdftk_io"
version = "0.1.7"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "This crate provides traits for reading and writing Statements and Graphs as well as implementations of these for common representations."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["json", "n3", "nq", "nt", "turtle", "xml"]
dot = []
json = ["serde_json"]
json-ld = ["serde_json"]
n3 = []
nq = []
nt = ["pest", "pest_derive"]
trig = []
turtle = ["pest", "pest_derive"]
xml = ["xml-rs", "rdftk_names"]

[dependencies]
error-chain = "0.12.2"
log = "0.4"
rdftk_core = { version = "0.2", path = "../rdftk_core" }
rdftk_iri = { version = "0.1", path = "../rdftk_iri" }

# feature-dependencies
pest = { version = "2.1", optional = true }
pest_derive = { version = "2.1", optional = true }
rdftk_names = { version = "0.1", path = "../rdftk_names", optional = true }
serde_json = { version = "1.0.64", optional = true }
xml-rs = { version = "0.8.3", optional = true }

[dev-dependencies]
pretty_assertions = "0.7.2"
rdftk_memgraph = { version = "0.1.8", path = "../rdftk_memgraph" }
