[package]
name = "rdftk_io"
version = "0.2.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
description = "This crate provides traits for reading and writing Statements and Graphs as well as implementations of these for common representations."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["json", "n3", "nq", "nt", "turtle", "xml"]
dot = []
json = ["serde_json"]
json-ld = ["serde_json"]
n3 = []
nq = ["pest", "pest_derive"]
nt = ["pest", "pest_derive"]
trig = []
turtle = ["pest", "pest_derive"]
xml = ["xml-rs", "rdftk_names"]

[dependencies]
lazy_static = "1.4"
log = "0.4"
rdftk_core = { version = "0.3", path = "../rdftk_core" }
rdftk_iri = { version = "0.2", path = "../rdftk_iri" }
regex = "1.5"
itertools = "0.10"

# feature-dependencies
pest = { version = "2.1", optional = true }
pest_derive = { version = "2.1", optional = true }
rdftk_names = { version = "0.1", path = "../rdftk_names", optional = true }
serde_json = { version = "1.0", optional = true }
xml-rs = { version = "0.8", optional = true }

[dev-dependencies]
env_logger = "0.9.1"
pretty_assertions = "1.3"
pretty_env_logger = "0.4"
indoc = "1.0"
