[package]
name = "rdftk_io"
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
description = "This crate provides traits for reading and writing Statements and Graphs as well as implementations of these for common representations."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["dot", "json", "json-ld", "n3", "nq", "nt", "trig", "turtle", "xml"]
dot = []
json = ["serde_json"]
json-ld = ["serde_json"]
n3 = []
nq = ["pest", "pest_derive"]
nt = ["pest", "pest_derive"]
trig = []
turtle = ["pest", "pest_derive"]
xml = ["xml-rs", "rdftk_names"]

[dependencies]
itertools = "0.13"
lazy_static = "1.4"
objio = "0.1.1"
rdftk_core = { version = "0.4.2", path = "../rdftk_core" }
rdftk_iri = { version = "0.2.2", path = "../rdftk_iri" }
regex = "1.5"
tracing = "0.1.40"

# feature-dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }
rdftk_names = { version = "0.2.1", path = "../rdftk_names", optional = true }
serde_json = { version = "1.0", optional = true }
xml-rs = { version = "0.8", optional = true }

[dev-dependencies]
indoc = "2.0"
log = "0.4.22"
pretty_assertions = "1.4"
pretty_env_logger = "0.5"
