[package]
name = "rdftk_iri"
version = "0.2.6"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2024"
description = "This crate provides an implementation of the IRI and URI specifications."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std", "serde"]
"std" = ["alloc", "bimap/std", "url/std", "uuid/std"]
"alloc" = []
"serde" = ["std", "dep:serde", "bimap/serde", "url/serde"]

[dependencies]
bimap = { version = "0.6", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
url = { version = "2.5", default-features = false }
uuid = { version = "1.23", default-features = false, features = ["v4"] }

[dev-dependencies]
