[package]
name = "rdftk_memgraph"
version = "0.1.6"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "This crate provides an implementation of the Graph traits from rdftk_core::graph for simple in-memory usage."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rdftk_iri = { version = "0.1.2", path = "../rdftk_iri" }
rdftk_core = { version = "0.1.7", path = "../rdftk_core" }
rdftk_names = { version = "0.1.4", path = "../rdftk_names" }
