[package]
name = "rdftk_memgraph"
version = "0.1.9"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "This crate provides an implementation of the Graph traits from rdftk_core::graph for simple in-memory usage."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
rdftk_core = { version = "0.1", path = "../rdftk_core" }
rdftk_names = { version = "0.1", path = "../rdftk_names" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
