[package]
name = "rdftk_names"
version = "0.1.5"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Provides a set of modules that contain the IRIs and QName strings for commonly used vocabularies"
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lazy_static = "1.4.0"
rdftk_iri = { version = "0.1.1", path = "../rdftk_iri" }
paste = "1.0.2"