[package]
name = "rdftk_ontology"
version = "0.1.0-pre"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "This crate provides a data model for creating ontologies using RDF Schema and OWL 2 Web Ontology Language (OWL)."
documentation = "https://docs.rs/rdftk_ontology/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lazy_static = "1.4.0"
rdftk_core = { version = "0.1", path = "../rdftk_core" }
rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
rdftk_names = { version = "0.1", path = "../rdftk_names" }
