[package]
name = "rdftk_ontology"
version = "0.1.0-pre2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "This crate provides a data model for creating ontologies using RDF Schema and OWL 2 Web Ontology Language (OWL)."
documentation = "https://docs.rs/rdftk_ontology/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lazy_static = "1.4"
rdftk_core = { version = "0.4", path = "../rdftk_core" }
rdftk_iri = { version = "0.2", path = "../rdftk_iri" }
rdftk_names = { version = "0.2", path = "../rdftk_names" }
