[package]
name = "rdftk_query"
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Placeholder for query API and SPARQL support"
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
error-chain = "0.12.2"
rdftk_core = { version = "0.1", path = "../rdftk_core" }
