[package]
name = "rdftk_query"
version = "0.1.2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
description = "This crate provides a placeholder for a query API and the SPARQL Query Language for RDF support."
documentation = "https://docs.rs/rdftk_core/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
combine = "4.6"
csv = "1.1"
error-chain = "0.12.2"
rdftk_core = { version = "0.3", path = "../rdftk_core" }
rdftk_iri = { version = "0.2", path = "../rdftk_iri" }
