[package]
name = "rdftk_skos"
version = "0.1.29"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "This crate provides a data model for the Simple Knowledge Organization System (SKOS) vocabulary."
documentation = "https://docs.rs/rdftk_skos/"
repository = "https://github.com/johnstonskj/rust-rdftk.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["documentation"]
documentation = ["somedoc"]

[dependencies]
lazy_static = "1.4.0"
paste = "1.0.2"
rdftk_io = { version = "0.1", path = "../rdftk_io" }
rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
rdftk_core = { version = "0.2", path = "../rdftk_core" }
rdftk_memgraph = { version = "0.1", path = "../rdftk_memgraph" }
rdftk_names = { version = "0.1", path = "../rdftk_names" }

somedoc = { version = "0.2.9", optional = true }

[dev-dependencies]
pretty_assertions = "0.7.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
